@@ -47,7 +47,7 @@ public class GroovyDslGradleBuildAssert extends GradleBuildAssert<GroovyDslGradl
 	 * @return {@code this} assertion object
 	 */
 	public GroovyDslGradleBuildAssert hasPlugin(String id, String version) {
-		return contains(String.format("id %s version %s", quote(id), quote(version)));
+		return contains("id %s version %s".formatted(quote(id), quote(version)));
 	}
 
 	/**
@@ -56,7 +56,7 @@ public class GroovyDslGradleBuildAssert extends GradleBuildAssert<GroovyDslGradl
 	 * @return {@code this} assertion object
 	 */
 	public GroovyDslGradleBuildAssert hasPlugin(String id) {
-		return contains(String.format("id %s", quote(id)));
+		return contains("id %s".formatted(quote(id)));
 	}
 
 }
