@@ -101,7 +101,7 @@ public class MavenExtensionContainer {
 	}
 
 	private String extensionKey(String groupId, String artifactId) {
-		return String.format("%s:%s", groupId, artifactId);
+		return "%s:%s".formatted(groupId, artifactId);
 	}
 
 }
